infra/config/envoy-config.yaml
static_resources:
  listeners:
  - name: listener_https
    address:
      socket_address:
        address: 172.18.0.10
        port_value: 443    
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            virtual_hosts:
            - name: api
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route:
                  cluster: api_service
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            alpn_protocols: [ "h2,http/1.1" ]
            tls_certificates:
            - certificate_chain: {filename: "/etc/envoy/certs/cert.pem"}
              private_key: {filename: "/etc/envoy/certs/key.pem"}
            validation_context:
              trusted_ca:
                filename: "/etc/ssl/certs/ca-certificates.crt"

  clusters:
  - name: api_service
    connect_timeout: 7s
    type: STATIC
    lb_policy: ROUND_ROBIN
    # This is where you insert it.
    http2_protocol_options: {}
    load_assignment:
      cluster_name: api_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.18.0.11
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
